fix button overflow

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,9 @@
 
 .app__button--indicator {
   opacity: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
   position: absolute;
   top: 50%;
   left: 50%;
